<resources>
    <string name="app_name" translatable="false">QR Code Manager</string>
    <string name="generate">Generate Product</string>
    <string name="scan">Scan Product</string>
    <string name="app_title" translatable="false">QRCodeManager</string>
    <string name="product_name_label">Product Name:</string>
    <string name="product_name">Enter product name</string>
    <string name="product_price_label">Product Price:</string>
    <string name="product_price">Enter product price</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="download_qr_code">Download QR Code</string>
    <string name="choose_option">Choose Scan Option :</string>
    <string name="option1">Scan from Gallery</string>
    <string name="option2">Scan from Camera</string>
    <string name="scan_qr">Scan QR code</string>
</resources>