<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScanActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_option"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:id="@+id/gallery_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/black"
                android:text="@string/option1"
                android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/camera_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:layout_marginTop="10dp"
            android:text="@string/option2"
            android:textColor="@color/black"/>

        </RadioGroup>

        <Button
            android:id="@+id/scan_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_marginTop="20dp"
            android:text="@string/scan_qr"/>

        <TextView
            android:id="@+id/product_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/product_name_label"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/product_price_label"
            android:layout_marginTop="55dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:visibility="gone"
            />

    </LinearLayout>

</RelativeLayout>

